--- a/keyboard/Makefile
+++ b/keyboard/Makefile
@@ -9,8 +9,8 @@ TARGET_DIR = .
 
 # project specific files
 SRC =	keymap_common.c 	matrix.c 	led.c	
-DEBOUNCE =	debounce_xeal.c
-#DEBOUNCE = debounce_hasu.c
+#DEBOUNCE =	debounce_xeal.c
+DEBOUNCE = debounce_hasu.c
 #DEBOUNCE = debounce_soarer.c
 SRC := keymap.c $(SRC) $(DEBOUNCE)
 
@@ -40,7 +40,7 @@ OPT_DEFS += -DBOOTLOADER_SIZE=4096
 
 # Build Options
 BOOTMAGIC_ENABLE = yes	# Virtual DIP switch configuration(+1000)
-#MOUSEKEY_ENABLE = yes	# Mouse keys(+4700)
+MOUSEKEY_ENABLE = yes	# Mouse keys(+4700)
 EXTRAKEY_ENABLE = yes	# Audio control and System control(+450)
 CONSOLE_ENABLE = yes	# Console for debug(+400)
 COMMAND_ENABLE = yes    # Commands for debug and configuration
