--- a/keyboard/Makefile
+++ b/keyboard/Makefile
@@ -41,11 +41,11 @@ OPT_DEFS += -DBOOTLOADER_SIZE=4096
 
 # Build Options
 BOOTMAGIC_ENABLE = yes	# Virtual DIP switch configuration(+1000)
-#MOUSEKEY_ENABLE = yes	# Mouse keys(+4700)
+MOUSEKEY_ENABLE = yes	# Mouse keys(+4700)
 EXTRAKEY_ENABLE = yes	# Audio control and System control(+450)
 CONSOLE_ENABLE = yes	# Console for debug(+400)
 COMMAND_ENABLE = yes    # Commands for debug and configuration
-NKRO_ENABLE = yes	    # USB Nkey Rollover
+NKRO_ENABLE = yes	    # USB Nkey Rollover - not yet supported in LUFA
 
 
 # Search Path
